Relacionando com banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=sistema-de-presenca
 spring.datasource.url=jdbc:postgresql://babar.db.elephantsql.com/jyinwxib
 spring.datasource.username=jyinwxib
 spring.datasource.password=jZFctc0liu4PYZHueYughrI3KQ8m-DvE
+
+# Configurações de pool de conexões
+spring.datasource.hikari.maximum-pool-size=2
