--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sistema-de-presenca
-spring.datasource.url=jdbc:postgresql://babar.db.elephantsql.com/jyinwxib
-spring.datasource.username=jyinwxib
-spring.datasource.password=jZFctc0liu4PYZHueYughrI3KQ8m-DvE
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Configurações de pool de conexões
 spring.datasource.hikari.maximum-pool-size=2
